# ESP32

./: README.md
ADC/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ADC/components/BSP/: CMakeLists.txt
ADC/components/BSP/ADC/: adc.c  adc.h
ADC/components/BSP/LED/: led.h
ADC/main/: main.c
BUTTON/: README.md
BUTTON/main/: CMakeLists.txt  main.c
BUTTON/main/BUTTON/: BUTTON.c  BUTTON.h
BUTTON/main/LED/: LED.c  LED.h
LCD_0708/: CMakeLists.txt
LCD_0708/main/: CMakeLists.txt  idf_component.yml  main.c
LCD_0708/main/DISPLAY/: LCD.c  LCD.h  SPI.c  SPI.h
LED/: sdkconfig  sdkconfig.old
LED/main/: idf_component.yml  main.c
LEDB/: CMakeLists.txt
LEDB/components/LED/: CMakeLists.txt  Kconfig
LEDB/components/LED/include/: LED.h
LEDB/main/: main.c
lcd/: sdkconfig
tjpgd/: sdkconfig  sdkconfig.old
tjpgd/main/: decode_image.c  decode_image.h  lcd_tjpgd_example_main.c  pretty_effect.c
uart/: sdkconfig
uart/components/uart/: CMakeLists.txt  Kconfig  uart.c
uart/components/uart/include/: uart.h
uart/main/: main.c
